--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="clear"> </div>
 					<!---header-welcomenote--->
 					<div class="header-welcome-note">
-						<h2>We are all about the world of cryptocurrencies and blcokchain.</h2>
+						<h2>Welcome to the world of cryptocurrencies and blockchain.</h2>
 						<a href="#about"><span> </span> Explore</a>
 					</div>
 					<!---//header-welcomenote--->
