--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Blockchain Life</title>
         <meta name="keywords" content="Blockchain, Magazine, cryptocurrency, Bitcoin, Litecoin, Ethereum, Ripple" />
-        <meta name="description" content="Megakit - HTML5 Theme">
+        <meta name="description" content="Team of experts working in the field of cryptocurrency. Ranging from investors, miners to traders, developers,etc. We are not limited to magazine only. We orgazine local meetup groups for interested people and exploers. We have online forums, strong social media presence also.">
         <meta name="author" content="blochainlife.info">
 
         <!-- Web Fonts -->
@@ -136,7 +136,7 @@
         <div class="s-swiper js__swiper-one-item">
             <!-- Swiper Wrapper -->
             <div class="swiper-wrapper">
-                <div class="g-fullheight--xs g-bg-position--center swiper-slide" style="background: url('img/1920x1080/spheres_blockchain_banner.jpg');">
+                <div class="g-fullheight--xs g-bg-position--center swiper-slide" style="background: url('img/background/spheres_blockchain_banner.jpg');">
                     <div class="container g-text-center--xs g-ver-center--xs">
                         <div class="g-margin-b-30--xs">
                             <h1 class="g-font-size-35--xs g-font-size-45--sm g-font-size-55--md g-color--white">Welcome to the world of<br>Cryptocurrencies and Blockchain</h1>
@@ -146,7 +146,7 @@
                         </a> -->
                     </div> 
                 </div>
-                <div class="g-fullheight--xs g-bg-position--center swiper-slide" style="background: url('img/1920x1080/blockchain-title-in-matrix-space_sk78fvxp__F0000.png');">
+                <div class="g-fullheight--xs g-bg-position--center swiper-slide" style="background: url('img/background/ConnectedWorld_blokchain_banner.png');">
                     <div class="container g-text-center--xs g-ver-center--xs">
                         <div class="g-margin-b-30--xs">
 <!--                            <div class="g-margin-b-30--xs">
@@ -268,7 +268,7 @@
         <!-- End Features -->
 
         <!-- Parallax -->
-<!--        <div class="js__parallax-window" style="background: url(img/1920x1080/03.jpg) 50% 0 no-repeat fixed;">
+<!--        <div class="js__parallax-window" style="background: url(img/background/03.jpg) 50% 0 no-repeat fixed;">
             <div class="container g-text-center--xs g-padding-y-80--xs g-padding-y-125--sm">
                 <div class="g-margin-b-80--xs">
                     <h2 class="g-font-size-40--xs g-font-size-50--sm g-font-size-60--md g-color--white">The Fastest Way To Develop</h2>
@@ -298,13 +298,13 @@
                 </div>
             </div>
             <div class="col-sm-3 g-promo-section__img-right--lg g-bg-position--center g-height-100-percent--md js__fullwidth-img">
-                <img class="img-responsive" src="img/970x970/03.jpg" alt="Image">
+                <img class="img-responsive" src="img/front/03.jpg" alt="Image">
             </div>
         </div>
         <!-- End Culture -->
 
         <!-- Subscribe -->
-        <div class="js__parallax-window" style="background: url(img/1920x1080/07.jpg) 50% 0 no-repeat fixed;">
+        <div class="js__parallax-window" style="background: url(img/background/07.jpg) 50% 0 no-repeat fixed;">
             <div class="g-container--sm g-text-center--xs g-padding-y-80--xs g-padding-y-125--sm">
                 <div class="g-margin-b-80--xs">
                     <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--white-opacity g-letter-spacing--2 g-margin-b-25--xs">Subscribe</p>
@@ -494,7 +494,7 @@
         <!-- End Portfolio -->
 
         <!-- Testimonials -->
-        <div class="js__parallax-window" style="background: url(img/1920x1080/04.jpg) 50% 0 no-repeat fixed;">
+        <div class="js__parallax-window" style="background: url(img/background/04.jpg) 50% 0 no-repeat fixed;">
             <div class="container g-text-center--xs g-padding-y-80--xs g-padding-y-125--sm">
                 <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--white-opacity g-letter-spacing--2 g-margin-b-50--xs">Testimonials</p>
                 <div class="s-swiper js__swiper-testimonials">
@@ -638,7 +638,7 @@
                     </article>
                     <!-- End News -->
                 </div>
-                
+
                 <div class="col-sm-4">
                     <!-- News -->
                     <article>
@@ -656,7 +656,7 @@
         <!-- End News -->
 
         <!-- Counter -->
-<!--        <div class="js__parallax-window" style="background: url(img/1920x1080/06.jpg) 50% 0 no-repeat fixed;">
+<!--        <div class="js__parallax-window" style="background: url(img/background/06.jpg) 50% 0 no-repeat fixed;">
             <div class="container g-padding-y-80--xs g-padding-y-125--sm">
                 <div class="row">
                     <div class="col-md-3 col-xs-6 g-full-width--xs g-margin-b-70--xs g-margin-b-0--lg">
